Bug 1607918.  Fix case handling for webkit-prefixed transition/animation event handlers.  r=smaug.

The WPTs were cherrypicked from https://github.com/web-platform-tests/wpt/commit/e05bdb8e0dae7f8098f7155a2b836d37e26dc36f

The issue in dom/events/test/test_bug1332699.html was discussed in
https://bugzilla.mozilla.org/show_bug.cgi?id=1332699#c8 and
https://bugzilla.mozilla.org/show_bug.cgi?id=1332699#c10 but Xidorn never quite
made it clear enough what the issue was, so it ended up making it into the tree.

Differential Revision: https://phabricator.services.mozilla.com/D59592

--HG--
extra : moz-landing-system : lando