dom/events/EventNameList.h
@@ -526,13 +526,17 @@ EVENT(webkitAnimationStart, eWebkitAnimationStart, EventNameType_All,
 EVENT(webkitTransitionEnd, eWebkitTransitionEnd, EventNameType_All,
       eTransitionEventClass)
 #ifndef MESSAGE_TO_EVENT
-EVENT(webkitanimationend, eWebkitAnimationEnd, EventNameType_All,
+// These are only here so that IsEventAttributeName() will return the right
+// thing for these events.  We could probably remove them if we used
+// Element::GetEventNameForAttr on the input to IsEventAttributeName before
+// looking it up in the hashtable...
+EVENT(webkitanimationend, eUnidentifiedEvent, EventNameType_All,
       eAnimationEventClass)
-EVENT(webkitanimationiteration, eWebkitAnimationIteration, EventNameType_All,
+EVENT(webkitanimationiteration, eUnidentifiedEvent, EventNameType_All,
       eAnimationEventClass)
-EVENT(webkitanimationstart, eWebkitAnimationStart, EventNameType_All,
+EVENT(webkitanimationstart, eUnidentifiedEvent, EventNameType_All,
       eAnimationEventClass)
-EVENT(webkittransitionend, eWebkitTransitionEnd, EventNameType_All,
+EVENT(webkittransitionend, eUnidentifiedEvent, EventNameType_All,
       eTransitionEventClass)
 #endif
 
