dom/svg/SVGElement.cpp
@@ -1371,7 +1371,7 @@ nsAtom* SVGElement::GetEventNameForAttr(nsAtom* aAttr) {
   if (aAttr == nsGkAtoms::onrepeat) return nsGkAtoms::onrepeatEvent;
   if (aAttr == nsGkAtoms::onend) return nsGkAtoms::onendEvent;
 
-  return aAttr;
+  return SVGElementBase::GetEventNameForAttr(aAttr);
 }
 
 SVGViewportElement* SVGElement::GetCtx() const {
